Disable serveral blink runtime features.
Fixes brave/brave-browser#11133
Fixes brave/brave-browser#11407
Fixes brave/brave-browser#11546
Fixes brave/brave-browser#11547

- Disables features via Chromium features:
  * Direct Sockets
  * Lang Client Hint Header
  * Signed Exchange Prefetch Cache For Navigations
  * Subresource Web Bundles

- Disabled the following blink features in
  BraveContentRendererClient::SetRuntimeFeaturesDefaultsBeforeBlinkInitialization
  since they don't have Chromium features:
  * Digital Goods
  * Native File System (File System Access)
- Added browser tests for these features

- Modified redirect-cc.py to allow overriding files under out/XXX/gen

- Added an override for blink::origin_trials::IsTrialValid and overrides
  for blink::OriginTrialContext methods AddFeature and AddForceEnabledTrials
  for trials:
  * NativeFileSystem2
  * SignedExchangeSubresourcePrefetch
  * SubresourceWebBundles
- Added browser tests for trials disablement.

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -630,6 +630,7 @@ if (!is_android) {
       "//brave/browser/farbling:browser_tests",
       "//brave/browser/ui/tabs/test:browser_tests",
       "//brave/browser/widevine:browser_tests",
+      "//brave/renderer/test:browser_tests",
       "//media:test_support",
     ]
 
