enable cf on desktop/disable extension

--- a/browser/BUILD.gn
+++ b/browser/BUILD.gn
@@ -48,6 +48,8 @@ source_set("browser_process") {
     "brave_browser_process_impl.h",
     "brave_content_browser_client.cc",
     "brave_content_browser_client.h",
+    "brave_cosmetic_resources_tab_helper.cc",
+    "brave_cosmetic_resources_tab_helper.h",
     "brave_local_state_prefs.cc",
     "brave_local_state_prefs.h",
     "brave_profile_prefs.cc",
@@ -150,6 +152,8 @@ source_set("browser_process") {
     "//brave/components/speedreader:buildflags",
     "//brave/components/tor/buildflags",
     "//brave/components/weekly_storage",
+    "//brave/content/browser/mojom",
+    "//brave/content/public/browser:browser",
     "//brave/services/network/public/cpp",
     "//brave/ui/brave_ads",
     "//brave/ui/brave_ads/public/cpp",
@@ -181,6 +185,7 @@ source_set("browser_process") {
     "//components/update_client:unzip_impl",
     "//content/public/browser",
     "//content/public/common",
+    "//mojo/public/cpp/bindings",
     "//extensions/buildflags",
     "//services/metrics/public/cpp:metrics_cpp",
     "//services/network/public/cpp",
