Initial Playlist implementation
* playlist core(components/playlist): manage playlist. Playlist core API
is exported via PlaylistService.
* extensions api(browser/extensions/api/playlist): playlist extensions
api.
* test purpose playlist webui(components/playlist/resources):
brave://playlist implementation.
* test player(browser/playlist): demo player. it plays downloaded
playlist item.

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -625,6 +625,7 @@ if (!is_android) {
     }
 
     deps = [
+      "//brave/browser/playlist/test:browser_tests",
       "//brave/browser/tor:browser_tests",
       "//brave/chromium_src/third_party/blink/renderer/modules:browser_tests",
       "//brave/components/ipfs/test:brave_ipfs_browser_tests",
