--- a/browser/BUILD.gn
+++ b/browser/BUILD.gn
@@ -13,6 +13,7 @@ import("//brave/components/crypto_dot_com/browser/buildflags/buildflags.gni")
 import("//brave/components/gemini/browser/buildflags/buildflags.gni")
 import("//brave/components/greaselion/browser/buildflags/buildflags.gni")
 import("//brave/components/ipfs/buildflags/buildflags.gni")
+import("//brave/components/playlist/buildflags/buildflags.gni")
 import("//brave/components/speedreader/buildflags.gni")
 import("//brave/components/tor/buildflags/buildflags.gni")
 import("//build/buildflag_header.gni")
@@ -125,6 +126,9 @@ source_set("browser_process") {
     "//brave/browser/brave_ads/notifications",
     "//brave/browser/net",
     "//brave/browser/translate/buildflags",
+    # //chrome/browser depends on //brave/browser:browser_process, add this target here
+    # to pull in dependencies needed for the overwrite codes in chromium_src/chrome/browser
+    "//brave/chromium_src/chrome/browser",
     "//brave/common",
     "//brave/common:pref_names",
     "//brave/components/binance/browser/buildflags",
@@ -147,6 +151,7 @@ source_set("browser_process") {
     "//brave/components/ntp_background_images/browser",
     "//brave/components/ntp_tiles",
     "//brave/components/p3a",
+    "//brave/components/playlist/buildflags",
     "//brave/components/resources",
     "//brave/components/speedreader:buildflags",
     "//brave/components/tor/buildflags",
@@ -206,6 +211,10 @@ source_set("browser_process") {
 
   if (enable_brave_sync) {
     deps += [ "//brave/components/brave_sync" ]
+  }
+
+  if (enable_playlist) {
+    deps += [ "//brave/components/playlist" ]
   }
 
   if (!is_android) {
