--- a/browser/extensions/BUILD.gn
+++ b/browser/extensions/BUILD.gn
@@ -53,6 +53,7 @@ source_set("extensions") {
     ":resources",
     "//base",
     "//brave/app:brave_generated_resources_grit",
+    "//brave/browser/extensions/api/playlist",
     "//brave/browser/profiles",
     "//brave/browser/webcompat_reporter",
     "//brave/common",
@@ -118,6 +119,7 @@ source_set("extensions") {
       "//brave/vendor/bat-native-ads:headers",
     ]
   }
+
   if (enable_brave_webtorrent) {
     deps += [
       "//brave/components/brave_webtorrent/browser",
