--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -4,6 +4,7 @@ import("//brave/components/brave_rewards/browser/buildflags/buildflags.gni")
 import("//brave/components/brave_wallet/buildflags/buildflags.gni")
 import("//brave/components/brave_wayback_machine/buildflags/buildflags.gni")
 import("//brave/components/ipfs/buildflags/buildflags.gni")
+import("//brave/components/playlist/buildflags/buildflags.gni")
 import("//brave/components/speedreader/buildflags.gni")
 import("//brave/components/tor/buildflags/buildflags.gni")
 import("//build/config/features.gni")
@@ -233,6 +234,8 @@ source_set("ui") {
     "//brave/components/ntp_background_images/common",
     "//brave/components/ntp_widget_utils/browser",
     "//brave/components/p3a:buildflags",
+    "//brave/components/playlist/buildflags",
+    "//brave/components/resources:static_resources",
     "//brave/components/tor:pref_names",
     "//brave/components/vector_icons",
     "//brave/components/webcompat_reporter/browser",
@@ -396,6 +399,17 @@ source_set("ui") {
       "webui/brave_wallet_ui.h",
     ]
     deps += [ "//brave/components/brave_wallet_ui:generated_resources" ]
+  }
+
+  if (enable_playlist) {
+    sources += [
+      "webui/playlist_ui.cc",
+      "webui/playlist_ui.h",
+    ]
+    deps += [
+      "//brave/browser/playlist",
+      "//brave/components/playlist/resources:generated_resources",
+    ]
   }
 
   if (toolkit_views) {
