--- a/components/resources/BUILD.gn
+++ b/components/resources/BUILD.gn
@@ -3,6 +3,7 @@ import("//brave/components/brave_rewards/browser/buildflags/buildflags.gni")
 import("//brave/components/brave_wallet/buildflags/buildflags.gni")
 import("//brave/components/crypto_dot_com/browser/buildflags/buildflags.gni")
 import("//brave/components/ipfs/buildflags/buildflags.gni")
+import("//brave/components/playlist/buildflags/buildflags.gni")
 import("//brave/components/speedreader/buildflags.gni")
 import("//brave/components/tor/buildflags/buildflags.gni")
 import("//build/config/locales.gni")
@@ -41,6 +42,7 @@ grit("static_resources") {
 
   defines = [
     "enable_brave_perf_predictor=$enable_brave_perf_predictor",
+    "enable_playlist=$enable_playlist",
     "enable_speedreader=$enable_speedreader",
     "ipfs_enabled=$ipfs_enabled",
     "crypto_dot_com_enabled=$crypto_dot_com_enabled",
@@ -87,6 +89,15 @@ repack("resources") {
     ]
     sources += [
       "$root_gen_dir/brave/components/brave_wallet/resources/brave_wallet_generated.pak",
+    ]
+  }
+
+  if (enable_playlist) {
+    deps += [
+      "//brave/components/playlist/resources:generated_resources",
+    ]
+    sources += [
+      "$root_gen_dir/brave/components/playlist/resources/playlist_generated.pak",
     ]
   }
 
