--- a/browser/BUILD.gn
+++ b/browser/BUILD.gn
@@ -140,6 +140,7 @@ source_set("browser_process") {
     "//brave/components/brave_wayback_machine:buildflags",
     "//brave/components/brave_webtorrent/browser/buildflags",
     "//brave/components/content_settings/core/browser",
+    "//brave/components/cosmetic_filters/resources",
     "//brave/components/crypto_dot_com/browser/buildflags",
     "//brave/components/gemini/browser/buildflags",
     "//brave/components/greaselion/browser/buildflags",
