--- a/browser/resources/extensions/BUILD.gn
+++ b/browser/resources/extensions/BUILD.gn
@@ -6,6 +6,7 @@ import("//tools/polymer/polymer.gni")
 import("//ui/webui/resources/tools/generate_grd.gni")
 
 preprocess_folder = "preprocessed"
+preprocess_manifest = "brave_preprocessed_manifest.json"
 preprocess_gen_manifest = "brave_preprocessed_gen_manifest.json"
 
 grit("resources") {
@@ -42,8 +43,24 @@ generate_grd("build_grd") {
   input_files = []
   input_files_base_dir = rebase_path(".", "//")
 
-  deps = [ ":preprocess_generated" ]
-  manifest_files = [ "$root_gen_dir/chrome/browser/resources/extensions/$preprocess_gen_manifest" ]
+  deps = [
+    ":preprocess",
+    ":preprocess_generated",
+  ]
+  manifest_files = [
+    "$root_gen_dir/chrome/browser/resources/extensions/$preprocess_manifest",
+    "$root_gen_dir/chrome/browser/resources/extensions/$preprocess_gen_manifest",
+  ]
+}
+
+preprocess_grit("preprocess") {
+  in_folder = "./"
+  out_folder = "$root_gen_dir/chrome/browser/resources/extensions/$preprocess_folder"
+  out_manifest = "$root_gen_dir/chrome/browser/resources/extensions/$preprocess_manifest"
+  in_files = [
+    "brave_overrides/extensions_detail_view.js",
+    "brave_overrides/index.js",
+  ]
 }
 
 preprocess_grit("preprocess_generated") {
