--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -4,6 +4,7 @@ import("//brave/components/brave_rewards/browser/buildflags/buildflags.gni")
 import("//brave/components/brave_wallet/buildflags/buildflags.gni")
 import("//brave/components/brave_wayback_machine/buildflags/buildflags.gni")
 import("//brave/components/ipfs/buildflags/buildflags.gni")
+import("//brave/components/sidebar/buildflags/buildflags.gni")
 import("//brave/components/speedreader/buildflags.gni")
 import("//brave/components/tor/buildflags/buildflags.gni")
 import("//build/config/features.gni")
@@ -53,6 +54,8 @@ source_set("ui") {
 
   if (!is_android) {
     sources += [
+      "brave_browser.cc",
+      "brave_browser.h",
       "brave_browser_command_controller.cc",
       "brave_browser_command_controller.h",
       "brave_browser_content_setting_bubble_model_delegate.cc",
@@ -231,6 +234,7 @@ source_set("ui") {
     "//brave/components/ntp_background_images/common",
     "//brave/components/ntp_widget_utils/browser",
     "//brave/components/p3a:buildflags",
+    "//brave/components/sidebar/buildflags",
     "//brave/components/tor:pref_names",
     "//brave/components/vector_icons",
     "//brave/components/webcompat_reporter/browser",
@@ -276,6 +280,24 @@ source_set("ui") {
     deps += [
       "//brave/components/ipfs",
       "//brave/components/ipfs_ui:generated_resources",
+    ]
+  }
+
+  if (enable_sidebar) {
+    deps += [
+      "//brave/browser/ui/sidebar",
+      "//brave/components/sidebar",
+    ]
+
+    sources += [
+      "views/frame/brave_contents_layout_manager.cc",
+      "views/frame/brave_contents_layout_manager.h",
+      "views/sidebar/sidebar_container_view.cc",
+      "views/sidebar/sidebar_container_view.h",
+      "views/sidebar/sidebar_item_view.cc",
+      "views/sidebar/sidebar_item_view.h",
+      "views/sidebar/sidebar_items_container_view.cc",
+      "views/sidebar/sidebar_items_container_view.h",
     ]
   }
 
