--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -635,6 +635,7 @@ brave_java_resources = [
   "java/res/drawable/brave_sync_toggle_on_btn_left.xml",
   "java/res/drawable/brave_sync_toggle_on_btn_right.xml",
   "java/res/drawable/brave_sync_top_rounded.xml",
+  "java/res/drawable/brave_sync_warning.xml",
   "java/res/drawable/circular_progress.xml",
   "java/res/drawable/default_indicator.xml",
   "java/res/drawable/enable_rewards_button.xml",
