--- a/components/sync/driver/BUILD.gn
+++ b/components/sync/driver/BUILD.gn
@@ -3,21 +3,30 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at http://mozilla.org/MPL/2.0/.
 
-source_set("brave_profile_sync_service_unit_test") {
+import("//brave/build/features.gni")
+
+source_set("unit_tests") {
   testonly = true
+
+  defines = brave_service_key_defines
 
   public_deps = [
     "//testing/gmock",
     "//testing/gtest",
   ]
 
-  sources = [ "//brave/components/sync/driver/brave_sync_profile_sync_service_unittest.cc" ]
+  sources = [
+    "//brave/components/sync/driver/brave_sync_auth_manager_unittest.cc",
+    "//brave/components/sync/driver/brave_sync_profile_sync_service_unittest.cc",
+  ]
 
   deps = [
     "//base/test:test_support",
+    "//brave/common:network_constants",
     "//brave/components/brave_sync:crypto",
     "//brave/components/brave_sync:network_time_helper",
     "//brave/components/brave_sync:prefs",
+    "//brave/components/signin/public/identity_manager",
     "//components/os_crypt:test_support",
     "//components/prefs:prefs",
     "//components/sync:test_support_engine",
@@ -25,5 +34,6 @@ source_set("brave_profile_sync_service_unit_test") {
     "//components/sync/driver:test_support",
     "//content/test:test_support",
     "//services/network/public/cpp:cpp",
+    "//services/network:test_support",
   ]
 }
