--- a/ui/brave_ads/BUILD.gn
+++ b/ui/brave_ads/BUILD.gn
@@ -40,6 +40,7 @@ source_set("brave_ads") {
       deps += [
         "//ui/aura",
         "//ui/wm/public",
+        "//ui/gfx/win",
       ]
     }
 
@@ -63,13 +64,26 @@ source_set("brave_ads") {
       "padded_image.cc",
       "padded_image.h",
     ]
+
+    if (is_mac) {
+      sources += [ "message_popup_view_mac.mm" ]
+    }
+
+    if (is_win) {
+      sources += [ "message_popup_view_win.cc" ]
+    }
+
     deps += [
       "//ui/compositor",
       "//ui/events",
       "//ui/views",
     ]
   }
+
   if (is_mac) {
-    frameworks = [ "Foundation.framework" ]
+    frameworks = [
+      "AppKit.framework",
+      "Foundation.framework",
+    ]
   }
 }
