--- a/browser/brave_ads/android/BUILD.gn
+++ b/browser/brave_ads/android/BUILD.gn
@@ -6,5 +6,6 @@ generate_jni("jni_headers") {
     "java/org/chromium/chrome/browser/BraveAdsNativeHelper.java",
     "java/org/chromium/chrome/browser/dialogs/BraveAdsSignupDialog.java",
     "java/org/chromium/chrome/browser/dialogs/BraveAdsNotificationDialog.java",
+    "java/org/chromium/chrome/browser/notifications/BraveAds.java"
   ]
 }
