--- a/components/brave_ads/browser/BUILD.gn
+++ b/components/brave_ads/browser/BUILD.gn
@@ -70,6 +70,7 @@ source_set("browser") {
       "//services/network/public/cpp",
       "//services/network/public/mojom",
       "//ui/base",
+      "//ui/message_center/public/cpp",
     ]
 
     if (is_android) {
