--- a/browser/BUILD.gn
+++ b/browser/BUILD.gn
@@ -154,7 +154,6 @@ source_set("browser_process") {
     "//brave/components/tor/buildflags",
     "//brave/components/weekly_storage",
     "//brave/content/browser/mojom",
-    "//brave/content/public/browser:browser",
     "//brave/services/network/public/cpp",
     "//brave/ui/brave_ads",
     "//brave/ui/brave_ads/public/cpp",
@@ -195,6 +194,8 @@ source_set("browser_process") {
     "//third_party/widevine/cdm:buildflags",
     "//ui/base",
   ]
+  sources += brave_content_public_browser_sources
+  deps += brave_content_public_browser_deps
 
   if (brave_wallet_enabled) {
     deps += [
