--- a/components/cosmetic_filters/content/renderer/BUILD.gn
+++ b/components/cosmetic_filters/content/renderer/BUILD.gn
@@ -17,6 +17,7 @@ source_set("renderer") {
 
   deps = [
     "//base",
+    "//brave/content/browser/mojom",
     "//content/public/renderer",
     "//gin",
     "//mojo/public/cpp/bindings",
