--- a/browser/BUILD.gn
+++ b/browser/BUILD.gn
@@ -10,6 +10,7 @@ import("//brave/components/brave_wallet/buildflags/buildflags.gni")
 import("//brave/components/brave_wayback_machine/buildflags/buildflags.gni")
 import("//brave/components/brave_webtorrent/browser/buildflags/buildflags.gni")
 import("//brave/components/crypto_dot_com/browser/buildflags/buildflags.gni")
+import("//brave/components/ftx/browser/buildflags/buildflags.gni")
 import("//brave/components/gemini/browser/buildflags/buildflags.gni")
 import("//brave/components/greaselion/browser/buildflags/buildflags.gni")
 import("//brave/components/ipfs/buildflags/buildflags.gni")
@@ -139,6 +140,7 @@ source_set("browser_process") {
     "//brave/components/brave_webtorrent/browser/buildflags",
     "//brave/components/content_settings/core/browser",
     "//brave/components/crypto_dot_com/browser/buildflags",
+    "//brave/components/ftx/browser/buildflags",
     "//brave/components/gemini/browser/buildflags",
     "//brave/components/greaselion/browser/buildflags",
     "//brave/components/ipfs/buildflags",
@@ -276,6 +278,20 @@ source_set("browser_process") {
       "//brave/browser/profiles",
       "//brave/components/crypto_dot_com/browser",
       "//brave/components/crypto_dot_com/common",
+      "//components/keyed_service/content",
+    ]
+  }
+
+  if (ftx_enabled) {
+    sources += [
+      "ftx/ftx_service_factory.cc",
+      "ftx/ftx_service_factory.h",
+    ]
+
+    deps += [
+      "//base",
+      "//brave/browser/profiles",
+      "//brave/components/ftx/browser",
       "//components/keyed_service/content",
     ]
   }
